--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,20 @@
-org.gradle.jvmargs=-Xmx1G
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs = -Xmx3G
+#-DsocksProxyHost=127.0.0.1 -DsocksProxyPort=1081
+#org.gradle.java.home=C:/Program Files/Java/jdk-1.8
 
-kotlin.code.style=official
+minecraft_version=1.12.2
+minecraft_version_range=[1.12,1.13)
+forge_version=14.23.5.2860
+forge_version_range=[23,)
+loader_version_range=[23,)
+mappings_channel=stable
+mappings_version=39-1.12
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop/
-minecraft_version=1.16.5
-parchment_version=2022.03.06-1.16.5
-fabric_version=0.42.0+1.16
-fabric_loader_version=0.15.11
-
-# Mod Properties
-	mod_version = 0.3.31
-	maven_group = org.embeddedt
-	archives_base_name = embeddium
-
-
-forge_version=36.2.39
-loom.platform=forge
-
-codechicken_fileid=3681973
-
-base_mc_version_commit=0263cc2ffd33599aa90d5b226242035459e45ee7
+mod_id=vintagium
+mod_name=Vintagium
+mod_main_class=SodiumClientMod
+mod_version=0.1
+mod_base_package=me.jellysquid.mods.sodium
+mod_description=Vintagium is a fork of Sodium, which is a free and open-source \noptimization mod for Minecraft which improves frame rates and reduces lag spikes.
