--- a/settings.gradle
+++ b/settings.gradle
@@ -1,26 +1,23 @@
 pluginManagement {
     repositories {
-        maven {
-            name = "Fabric"
-            url = uri("https://maven.fabricmc.net/")
-        }
-        maven {
-            url = uri("https://maven.minecraftforge.net/")
-        }
-        maven {
-            url = uri("https://maven.architectury.dev/")
-        }
         gradlePluginPortal()
-        maven("https://prmaven.neoforged.net/ModDevGradle/pr118") {
-            name = "Maven for PR #118"
-            content {
-                includeModule("net.neoforged", "moddev-gradle")
-                includeModule("net.neoforged.moddev", "net.neoforged.moddev.gradle.plugin")
-                includeModule("net.neoforged.moddev.repositories", "net.neoforged.moddev.repositories.gradle.plugin")
-                includeModule("net.neoforged.moddev.legacy", "net.neoforged.moddev.legacy.gradle.plugin")
+        maven { url = 'https://gitlab.com/api/v4/projects/26758973/packages/maven' }
+        maven {
+            // RetroFuturaGradle
+            name = "GTNH Maven"
+            url = uri("http://jenkins.usrv.eu:8081/nexus/content/groups/public/")
+            allowInsecureProtocol = true
+            mavenContent {
+                includeGroup("com.gtnewhorizons")
+                includeGroup("com.gtnewhorizons.retrofuturagradle")
             }
         }
     }
 }
-val minecraft_version: String by settings
-rootProject.name = "embeddium-${minecraft_version}"
+
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.7.0' // Provides java toolchains
+}
+
+
+rootProject.name = "${mod_name}"
